--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 <title>Hello World!</title>
-<link rel="stylesheet" href="bluestyle.css">
+<link rel="stylesheet" href="bluestyle.css" />
+  <meta charset="utf-8" />
 </head>
 <body>
 
